kubernetes/infrastructure/controllers/production/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: wireguard
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - wireguard.kryoseu.com
    secretName: wildcard-tls
  rules:
  - host: wireguard.kryoseu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wireguard
            port:
              number: 51820 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: home-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - otarios.kryoseu.com
    secretName: wildcard-tls
  rules:
  - host: otarios.kryoseu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocketchat-server
            port:
              number: 3000 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: plex-ns
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - radarr.kryoseu.com
    - deluge.kryoseu.com
    - prowlarr.kryoseu.com
    secretName: wildcard-tls
  rules:
  - host: radarr.kryoseu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878 
  - host: deluge.kryoseu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge
            port:
              number: 8112 
  - host: prowlarr.kryoseu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
